// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSubtitle should render correctly 1`] = `
<div>
  <h6
    class="rmd-card__subtitle rmd-card__subtitle--secondary"
  >
    Content
  </h6>
</div>
`;

exports[`CardSubtitle should render correctly 2`] = `
<div>
  <h6
    class="rmd-card__subtitle"
  >
    Content
  </h6>
</div>
`;

exports[`CardSubtitle should render correctly 3`] = `
<div>
  <h6
    class="rmd-card__subtitle rmd-card__subtitle--secondary custom-class-name"
  >
    Content
  </h6>
</div>
`;

exports[`CardSubtitle should render correctly 4`] = `
<div>
  <h6
    class="rmd-card__subtitle custom-class-name"
  >
    Content
  </h6>
</div>
`;
